fix: correct spacing in SCSS for section width

--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -371,7 +371,7 @@ body {
             }
 
             .section {
-                width: 33%;
+                
 
                 .desc {
                     display: flex;
